--- a/frontend/blood-donor-app/package.json
+++ b/frontend/blood-donor-app/package.json
@@ -20,9 +20,10 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "rollup": "^4.24.0"
   },
   "engines": {
-    "node": "18.x"
+    "node": "22.x"
   }
 }
